addons/livekit/manifests/turn-nlb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livekit-turn
  namespace: livekit
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-subnets: "<SUBNET_1>,<SUBNET_2>"
    service.beta.kubernetes.io/aws-load-balancer-attributes: "load_balancing.cross_zone.enabled=true"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: livekit-server
  ports:
    - name: turn-tls
      protocol: TCP
      port: 5349
      targetPort: 5349
    - name: turn-udp
      protocol: UDP
      port: 3478
      targetPort: 3478
    - name: lk-rtc
      protocol: TCP
      port: 7881
      targetPort: 7881
