addons/livekit/manifests/livekit-alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livekit-alb
  namespace: livekit
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: <ACM_CERTIFICATE_ARN>
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
    alb.ingress.kubernetes.io/subnets: <SUBNET_1>,<SUBNET_2>
spec:
  ingressClassName: alb
  rules:
    - host: <LIVEKIT_DOMAIN>
      http:
        paths:
          - path: /rtc
            pathType: Prefix
            backend:
              service:
                name: livekit-server
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: livekit-server
                port:
                  number: 80
